@@ -21,6 +21,7 @@ Version 0.12.0-SNAPSHOT
     (KILOMETERS, NAUTICAL_MILES, STATUTE_MILES) so that more sentences
     can use them @joshsweaney
   - Added separate convenience methods for ship and cargo type strings @joshsweaney
+  - Added ability to set units in TTM sentence @joshsweaney
 
 Version 0.11.0 (2019-07-06)
 
